Bug 118226 - goal seek - insert result into the variable cell doesn't work
Summary: goal seek - insert result into the variable cell doesn't work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.1 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GoalSeek
  Show dependency treegraph
 
Reported: 2018-06-18 14:52 UTC by raal
Modified: 2024-06-18 13:34 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
printscreen (55.64 KB, image/png)
2018-06-18 14:54 UTC, raal
Details
file for test (8.42 KB, application/vnd.oasis.opendocument.spreadsheet)
2018-06-18 16:11 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2018-06-18 14:52:44 UTC
Description:
Run Goal seek and insert result into the cell 

Steps to Reproduce:
1.open attached file
2.select B$
3.tool / goal seek
4. Target value=15000 ; Variable cell= B1 ; OK
5. question dialog "insert result into the variable cell". Press yes

Actual Results:
nothing happens

Expected Results:
B1= 200000
B4 = 15000



Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 raal 2018-06-18 14:53:45 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 3e496e9eea657e251f49196a4c317af5be46c51b is the first bad commit
commit 3e496e9eea657e251f49196a4c317af5be46c51b
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Feb 28 08:08:11 2018 +0100

    source 9fcef57a34dbd88a98621dfaf8668fa076dd98f1
author	Caolán McNamara <caolanm@redhat.com>	2018-02-27 10:11:52 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-02-27 17:25:59 +0100
commit 9fcef57a34dbd88a98621dfaf8668fa076dd98f1 (patch)
tree 844e9ca54e0b30faf1b71b42397b4a8143460a43
parent aa4548d1f91e15b8711bbcbd2ad939247579f9a8 (diff)
convert Redline warning dialog to .ui to get helpids
etc.
Comment 2 raal 2018-06-18 14:54:35 UTC
Created attachment 142869 [details]
printscreen
Comment 3 Caolán McNamara 2018-06-18 15:27:28 UTC
Comment #1 mentions "open attached file" ?
Comment 4 raal 2018-06-18 16:11:45 UTC
Created attachment 142872 [details]
file for test
Comment 5 Jacques Guilleron 2018-06-18 21:55:47 UTC
Hi raal,

I reproduce with
LO  6.1.0.0.alpha0+ Build ID: 0d1479cbd442c3ec3bdd20333c341ea24dcca21e
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-03-10_01:47:26
Locale: fr-FR (fr_FR); Calc: CL
and upper versions
but not with
LO  6.0.4.2 Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
Threads CPU : 2; OS : Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: CL
To do it, I select only B4 then Tools  > Goal Seek... and so on...
Comment 6 Commit Notification 2018-06-19 19:23:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43fba4906a5a6b9d3e6674df1c8101b1f141752b

Resolves: tdf#118226 yes/no reversed

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2018-06-19 20:01:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2f448d2ddf00579bb452c3d2e7a5287e8e78ff62&h=libreoffice-6-1

Resolves: tdf#118226 yes/no reversed

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xavier Van Wijmeersch 2018-06-20 14:14:28 UTC
its working with

Version: 6.2.0.0.alpha0+
Build ID: 8cc60b05c688e0edc03a63da0afd85f1e853bbc3
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded
Comment 9 Jacques Guilleron 2018-06-20 15:06:31 UTC
Works fine for me now with
LO 6.2.0.0.alpha0+ Build ID: 67c88e284af74c88e37cc8f66cdfc0e346de45ac
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-06-19_23:41:55
Locale: fr-FR (fr_FR); Calc: CL
Thank you Caolán.
Comment 10 Commit Notification 2024-06-18 13:34:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5dfa4bda2cb023a6a2fbccd4ff63a704f958851f

tdf#118226, tdf#161462: sc: Add UItest

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.