Resolves: tdf#118226 yes/no reversed

Change-Id: I60f6f0c13e1971e0000698ce71fbbdd7244fb85d